project파일 재배치 및 경로 수정

--- a/uwsgi/employ-uwsgi.ini
+++ b/uwsgi/employ-uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-chdir = /Users/jaemoon/Desktop/Django-project/awsinfra/example
-virtualenv = /Users/jaemoon/Desktop/Django-project/awsinfra/.venv
-module = example.wsgi.local
+chdir = /Users/jaemoon/Desktop/Django-project/infra/conf
+virtualenv = /Users/jaemoon/Desktop/Django-project/infra/.venv
+module = conf.wsgi.employ
 plugins = python3
 http = 0.0.0.0:8000
 
@@ -14,5 +14,5 @@ master = true
 vacuum = true
 log-reopen = true
 chmod-socket = 666
-pidfile = /tmp/example.pid
+pidfile = /tmp/conf.pid
 chown-socket = jaemoon:admin
