uwsgi socket 사용 수정

--- a/uwsgi/local-uwsgi.ini
+++ b/uwsgi/local-uwsgi.ini
@@ -1,18 +1,21 @@
 [uwsgi]
 chdir = /Users/jaemoon/Desktop/Django-project/infra
-virtualenv = /Users/jaemoon/Desktop/Django-project/infra/.venv
+home = /Users/jaemoon/Desktop/Django-project/infra/.venv
 module = conf.wsgi.local
-plugins = python3
+plugins-list = /usr/local/Cellar/uwsgi/2.0.19.1_2/libexec/uwsgi
+# plugin = python3
 
 uid = root
 gid = admin
 
-socket = 
-chown-socket = jaemoon:admin
+socket = /tmp/django.socket 
+chown-socket = root:admin
 chmod-socket = 666
 
-pidfile = /var/run/uwsgi.pid
+pidfile = /Users/jaemoon/logs/uwsgi/uwsgi.pid
 master = true
 vacuum = true
-logto = /var/log/uwsgi/mysite/@(exec://date +%%Y-%%m-%%d).log
+logto = /Users/jaemoon/logs/uwsgi/example.log
 log-reopen = true
+enable-threads = true
+
