--- a/nginx.conf
+++ b/nginx.conf
@@ -9,29 +9,29 @@
 #      include     uwsgi_params;
 #  }
 #}
-
-
-# upstream django {
-#     server 127.0.0.1:8001; # for a web port socket (we'll use this first)
-# }
-
+#
+upstream django {
+    # server unix:///tmp/django.socket;
+    server 127.0.0.1:8000;
+}
 server {
-    listen      80;
-    server_name example.com; # substitute your machine's IP address or FQDN
+    listen        80 default_server;
+    # listen   [::]:80 default_server;
+    server_name 127.0.0.1;
     charset     utf-8;
 
-    client_max_body_size 75M;   # adjust to taste
+    client_max_body_size 75M;  
 
     # location /media  {
     #     alias /path/to/your/mysite/media;  # your Django project's media files - amend as required
     # }
 
     location /static {
-        alias /Users/jaemoon/Desktop/Django-project/infra/conf/static; # your Django project's static files - amend as required
+        alias /Users/jaemoon/Desktop/Django-project/infra/conf/static;
     }
 
     location / {
         uwsgi_pass  django;
-        include     /Users/jaemoon/Desktop/Django-project/infra/uwsgi/local-uwsgi.ini; # the uwsgi_params file you installed
+        include     /etc/nginx/uwsgi_params   
     }
 }
