--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,13 +1,14 @@
 [uwsgi]
 chdir = /Users/jaemoon/Desktop/Django-project/infra
 home = /Users/jaemoon/Desktop/Django-project/infra/.venv
-module = conf.wsgi.local
+module = conf.wsgi
 plugins-list = /usr/local/Cellar/uwsgi/2.0.19.1_2/libexec/uwsgi
 # plugin = python3
 
 uid = root
 gid = admin
 
+# http=:8000
 socket = /tmp/django.socket 
 chown-socket = root:admin
 chmod-socket = 666
@@ -18,4 +19,3 @@ vacuum = true
 logto = /Users/jaemoon/logs/uwsgi/example.log
 log-reopen = true
 enable-threads = true
-
